[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Quantico-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/theme.tres" type="Theme" id=3]
[ext_resource path="res://src/world/BackgroundScroll.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/menu/SettingsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/menu/RecordsMenu.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundScroll" parent="." instance=ExtResource( 4 )]

[node name="Title" type="Label" parent="."]
margin_right = 360.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "BURN AND RAVE"
align = 1
valign = 1

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -25.0
margin_right = 75.0
margin_bottom = 25.0
custom_constants/separation = 32

[node name="Start" type="Button" parent="Options"]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
text = "NEW GAME"

[node name="Records" type="Button" parent="Options"]
margin_top = 82.0
margin_right = 150.0
margin_bottom = 132.0
rect_min_size = Vector2( 150, 50 )
text = "RECORDS"

[node name="Settings" type="Button" parent="Options"]
margin_top = 164.0
margin_right = 150.0
margin_bottom = 214.0
rect_min_size = Vector2( 150, 50 )
text = "SETTINGS"

[node name="Quit" type="Button" parent="Options"]
margin_top = 246.0
margin_right = 150.0
margin_bottom = 296.0
rect_min_size = Vector2( 150, 50 )
text = "QUIT"

[node name="copyright" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -142.0
margin_top = -12.0
custom_fonts/font = SubResource( 2 )
text = "Copyright Â© 2022 Jack Anderson "
align = 2
valign = 2

[node name="version" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -142.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "v0.1.0 Demo "
align = 2
valign = 2

[node name="SettingsMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="RecordsMenu" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="Options/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Options/Records" to="." method="_on_Records_pressed"]
[connection signal="pressed" from="Options/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
